--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -3,8 +3,8 @@ version: "3.3"
 
 services:
     janus_streamer:
-        image: rcastill/janus-gateway
-        restart: always
+        build:
+          context: .
         env_file: ./.env
         network_mode: "host"
         volumes:
